Migrate to use ffmasm